css/main.css
/* ... */
.svgcolor-light path {
    fill: #fff;
    stroke: #fff;
    stroke-width:0;
}
.svgcolor-dark path {
    fill: #2F3238;
    stroke: #2F3238;
    stroke-width:0;
}
.no-section-padding{
	padding-top:0px;
}
.section-padding{
	padding-top:100px;
}



/*
 * media queries
 */
@media only screen and (max-width: 970px) {
	footer {
		text-align: center;
	}
	footer .pull-right {
		float: none !important;
	}
	.col-lg-3 {
		margin-bottom: 6px;
	}
	#landingLogo {
		display: block;
		margin: 0 auto;
	}

}
@media only screen and (max-width: 768px) { /*col-md*/
	#head .hero h2 {
		font-size:25px;
		line-height:25px;
	}

	#landingText 	{
		margin-top:-130px;
	}

	#consultation-btn {
		font-size: 12px;
	}

	.top-nav-collapse .company .border{
		border:none;
	}
	.top-nav-collapse .company{
		padding-top:14px;
	}
	.owl-buttons{
		display:none;
	}
	.background-icon{
		display: none;
	}
	 #menuBar {
        display:block;
    }
	.nav li {
		float:none;
		display:block;
	}
	#serviceBackgroundColor .text_info {
		margin:30px auto;
		padding:0 60px; 
	}
	.aboutInfo {
		margin-left:0;
	}
	.col-lg-3 {
		margin-bottom: 6px;
	}
	#landingLogo {
		display: block;
		max-width: 75%;
		height: auto;
	}
}




/*only for webkit  browsers*/
@media screen and (-webkit-min-device-pixel-ratio:0) {
    .background-middle-full.fixed{ 
        background-attachment: scroll !important;
    }
}

